Fix items container spacing.

--- a/resources/style.css
+++ b/resources/style.css
@@ -71,34 +71,30 @@ html {
   display: block;
 }
 
-#tea {
-  max-width: 1000px;
-  max-height: 700px;
+#featured-tea {
+  width: 1000px;
+  height: 700px;
   display: block;
+  margin: 0 auto;
+
 }
 
 .items-container {
   display: flex;
-  max-width: 1000px;
-  max-height: 700px;
-  margin: 0 auto;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  padding-top: 70px;
+  width: 1000px;
+  height: 700px;
+  flex-flow: row wrap;
+  align-content: space-between;
 }
-/* fix padding on items */
 
 .items {
-  padding: 5px;
   display: inline-flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  flex-direction: column;
-  margin: 0 auto;
+  justify-content: space-between;
+  flex-flow: column wrap;
 }
 
 .items img {
+  padding: 5px;
   height: 200px;
   width: 300px;
   display: block;
